[package]
name = "rustkube"
version = "0.1.0"
authors = ["Jingshao Chen <jingshaochen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
handlebars = "3.0.1"
serde_json = "1.0.50"
serde_yaml = "0.8"